Kubernetes/task-ms-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-microservice
  namespace: todo-app
  labels:
    app: task-microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task-microservice
  template:
    metadata:
      name: task-microservice
      labels:
        app: task-microservice
    spec:
      containers:
        - name: task-microservice
          image: ghcr.io/juuwel/todo-app-task-ms:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
