Kubernetes/user-ms-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-microservice
  namespace: todo-app
  labels:
    app: user-microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-microservice
  template:
    metadata:
      name: user-microservice
      labels:
        app: user-microservice
    spec:
      containers:
        - name: user-microservice
          image: ghcr.io/juuwel/todo-app-user-ms:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
