Kubernetes/task-ms-postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-db
  namespace: todo-app
  labels:
    app: task-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task-db
  template:
    metadata:
      labels:
        app: task-db
    spec:
      containers:
        - name: task-db
          image: postgres
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: task-db-storage
      volumes:
        - name: task-db-storage
          persistentVolumeClaim:
            claimName: task-db-volume-claim
---
apiVersion: v1
kind: Service
metadata:
  name: task-db
  namespace: todo-app
  labels:
    app: task-db
spec:
  type: NodePort
  ports:
    - port: 5433
  selector:
    app: task-db
