Kubernetes/task-ms-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-microservice
  namespace: todo-app
spec:
  selector:
    app: task-microservice
  ports:
    - protocol: TCP
      port: 1000
      targetPort: 8080
  type: LoadBalancer
